<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/redicon"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/hpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp_label" />

            <TextView
                android:id="@+id/spLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_label" />

            <TextView
                android:id="@+id/powLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pow_label" />

            <TextView
                android:id="@+id/defLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def_label" />

            <TextView
                android:id="@+id/speedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/speedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/hpValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/spValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/powValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/defValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="83dp"
        android:layout_toRightOf="@+id/linearLayout1"
        android:src="@drawable/spsprite" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/textView1"
        android:src="@drawable/heartsprite" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_marginBottom="56dp"
        android:layout_toRightOf="@+id/textView1"
        android:src="@drawable/powsprite" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_marginBottom="24dp"
        android:layout_toRightOf="@+id/textView1"
        android:src="@drawable/defsprite" />

</RelativeLayout>